# django-theme-volt

./: .gitignore  .pylintrc  LICENSE  README.rst  db.sqlite3  manage.py  pytest.ini  requirements.txt  setup.cfg
admin_template/: utils.py
admin_template/static/admin_volt/assets/css/: volt.css  volt.min.css
admin_template/templates/admin/: base.html  change_list_results.html  footer.html  index.html  navigation.html  pagination.html  sidebar.html
admin_template/templatetags/: admin_volt.py
riso/: asgi.py  settings.py  urls.py  wsgi.py
